force-app/main/default/objects/Billing_c__c/Billing_c__c.object-meta.xml
<CustomObject>
    <label>Billing__c</label>
    <nameField>
        <label>Billing__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing__c</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>