force-app/main/default/objects/Billing_c__c/fields/Consultation_Charge_c__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Charge_c__c</fullName>
    <label>Consultation_Charge__c</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>