force-app/main/default/objects/Billing_c__c/fields/Days_Overdue_c__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue_c__c</fullName>
    <formula>IF(Outstanding_Balance__c &gt; 0, TODAY() - Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days_Overdue__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>