force-app/main/default/objects/Billing_c__c/fields/Insurance_Provider_Link__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Provider Link</label>
    <referenceTo>Insurance_Provider_c__c</referenceTo>
    <relationshipLabel>Insurance Provider</relationshipLabel>
    <relationshipName>Insurance_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>