force-app/main/default/objects/Billing_c__c/fields/insuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>insuranceAmount__c</fullName>
    <label>insuranceAmount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>