force-app/main/default/objects/Billing_c__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>