force-app/main/default/objects/Billing_c__c/fields/Medicine_Charge_c__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Charge_c__c</fullName>
    <label>Medicine_Charge__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>