force-app/main/default/objects/Billing_c__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <formula>Total_Invoice_Amount__c  - (Amount_Paid__c +  insuranceAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>