force-app/main/default/objects/Billing_c__c/fields/Patient_c__c.field-meta.xml
<CustomField>
    <fullName>Patient_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Link</label>
    <referenceTo>Patient_c__c</referenceTo>
    <relationshipLabel>patient</relationshipLabel>
    <relationshipName>patient_b</relationshipName>
    <type>Lookup</type>
</CustomField>