force-app/main/default/objects/Billing_c__c/fields/Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount__c</fullName>
    <formula>Consultation_Charge_c__c +  Medicine_Charge_c__c +  Treatment_Charge_c__c + Ward_Charge_c__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Invoice_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>