force-app/main/default/objects/Billing_c__c/fields/Treatment_Charge_c__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Charge_c__c</fullName>
    <label>Treatment_Charge__c</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>