force-app/main/default/objects/Billing_c__c/validationRules/billing.validationRule-meta.xml
<ValidationRule>
    <fullName>billing</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c &gt; Total_Amount__c</errorConditionFormula>
    <errorMessage>&quot;Amount paid cannot
exceed the total invoice
amount.&quot;</errorMessage>
</ValidationRule>