force-app/main/default/objects/Billing_c__c/validationRules/billing_balance.validationRule-meta.xml
<ValidationRule>
    <fullName>billing_balance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Outstanding_Balance__c &gt; 0,
ISPICKVAL(Invoice_Status__c, &quot;Paid&quot;))</errorConditionFormula>
    <errorDisplayField>Invoice_Status__c</errorDisplayField>
    <errorMessage>&quot;Invoice cannot be
marked Paid while a
balance remains.&quot;</errorMessage>
</ValidationRule>